# gemkeep

./: .gitignore  CLAUDE.md  README.md  duplication-analysis.json  index.html  justfile  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  x
.a5c/: project-profile.json
.a5c/processes/: behavioral-tdd.js  sprint-development.diagram.md  sprint-development.js  sprint-development.process.md  sprint-review.diagram.md  sprint-review.js  sprint-review.process.md  task.js
.cargo/: config.toml
docs/: architecure.md  backlog.md  code-improvements.md  coding-standards.md  competitive-analysis.md  keyboard-map.md  low-level-design.md  manual-test-plan-sprint7.md  manual-test-reporst.txt  manual-tests.md  screen-review-gaps.md  test-coverage-matrix.md  test-fixture-design.md  test-improvements.md  testing-philosophy.md  testing-standards.md  ui-wireframes.md  user_stories.md
docs/sprints/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-10a.md  sprint-improvements.md  sprint-photoframe-redesign.md  sprint-plan.md
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/compat/: gexiv2_compat.c
src-tauri/icons/: icon.icns
src-tauri/src/: asset_scope_tests.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: decisions.rs  dev.rs  import.rs  ipc_tests.rs  mod.rs  projects.rs  stacks.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/decisions/: engine.rs  model.rs
src-tauri/src/import/: exif.rs  integration_tests.rs  metadata_tests.rs  mod.rs  orientation_tests.rs  pairs.rs  pipeline.rs  scanner.rs  stacks.rs  stacks_tests.rs  test_fixtures.rs  test_fixtures_validation.rs  thumbnail_composition_tests.rs  thumbnails.rs  util.rs
src-tauri/src/photos/: model.rs  repository.rs
src-tauri/src/projects/: integration_tests.rs  manager.rs  mod.rs  model.rs  repository.rs  slug.rs
src/lib/: tauri-config.test.ts
src/test/: browser-helpers.ts  browser-setup.ts  decision-helpers.ts  decision-visual-helpers.ts  fixtures.ts  helpers.ts  mock-factories.ts  pixel-verifier.browser.test.ts  pixel-verifier.ts  setup.ts  (+4 more)
(+78 files in other folders)
